fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -331,11 +331,12 @@ a {
 	.homepage-title {
 		width: 12em;
 		height: 1em;
+		margin-top: 1em;
 	}
 
 	.homepage-description{
 		width: 45em;
-		margin-top: 18em;
+		margin-top: 25em;
 		margin-bottom: 6em;
 	}
 }
@@ -461,7 +462,7 @@ a {
 	}
 
 	.about-more-info {
-		width: 78vw;
+		width: 75vw;
 	}
 }
 
@@ -472,12 +473,8 @@ a {
 }
 
 @media (min-width: 1600px) {
-	.about-container2 {
-		width: 80vw;
-	}
-	
 	.about-more-info {
-		width: 65vw;
+		width: 68vw;
 	}
 }
 
